Added bootstrap, added better npm scripts
- Added customizable Bootstrap sass styles
- Added environment variables with npm-better-run
- Better webpack settings

--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -2,6 +2,6 @@
   <p>Counter: {{ count | async }}</p>
 </div>
 
-<button (click)="increment()">Increment</button>
-<button (click)="decrement()">Decrement</button>
-<button (click)="reset()">Reset</button>
+<button class="btn btn-primary" (click)="increment()">Increment</button>
+<button class="btn btn-primary" (click)="decrement()">Decrement</button>
+<button class="btn btn-primary" (click)="reset()">Reset</button>
