--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,3 +1,9 @@
 <footer>
-  Footer
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        Footer
+      </div>
+    </div>
+  </div>
 </footer>
