--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,3 +1,9 @@
 <header class="header-main">
-  Header
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12">
+        Header
+      </div>
+    </div>
+  </div>
 </header>
