--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,13 @@
 <my-app-layout-header></my-app-layout-header>
-<main class="main-content">
-  <h1>Hello from Angular App with Webpack</h1>
-  <my-app-counter></my-app-counter>
-</main>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <main class="main-content">
+        <h1>Hello from Angular App with Webpack</h1>
+        <my-app-counter></my-app-counter>
+      </main>
+    </div>
+  </div>
+</div>
 <my-app-layout-footer></my-app-layout-footer>
-<ngrx-store-log-monitor toggleCommand="ctrl-h" positionCommand="ctrl-m"></ngrx-store-log-monitor>
+<ngrx-store-log-monitor *ngIf="devTools" toggleCommand="ctrl-h" positionCommand="ctrl-m"></ngrx-store-log-monitor>
