Applied official angular style guide

--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        Footer
+        <p>Angular Webpack Starter.</p>
       </div>
     </div>
   </div>
